#https://blog.csdn.net/bigdog_1027/article/details/79113342
#https://blog.csdn.net/afei__/article/details/81201039?depth_1-utm_source=
#distribute.pc_relevant.none-task&utm_source=distribute.pc_relevant.none-task

cmake_minimum_required(VERSION 3.0)

cmake_policy(VERSION 3.0)

#Ìí¼Ó×ÓÄ¿Â¼
add_subdirectory(utils)
add_subdirectory(xcb)
add_subdirectory(xlib)